--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ override.tf.json
 .terraformrc
 terraform.rc
 
+srv-dev-pem.pem
 # End of https://www.toptal.com/developers/gitignore/api/terraform
